--- a/Web/Views/Car/Index.cshtml
+++ b/Web/Views/Car/Index.cshtml
@@ -14,52 +14,78 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Picture</th>
-            <th>
-                <sort-header key="@CarSortKey.Company" state="@Model.SortModel">Company</sort-header>
-            </th>
-            <th>
-                <sort-header key="@CarSortKey.Model" state="@Model.SortModel">Model</sort-header>
-            </th>
-            <th>
-                <sort-header key="@CarSortKey.Year" state="@Model.SortModel">Year Manufactured</sort-header>
-            </th>
-            <th>
-                <sort-header key="@CarSortKey.Displacement" state="@Model.SortModel">Displacement</sort-header>
-            </th>
-            <th></th>
-        </tr>
-        <tr>
-            <th></th>
+            <th>Filter: </th>
             <th>
                 <form method="get">
-                    <select name="company" asp-items="@Model.FilterModel.Company"
+                    <input name="sortKey" type="hidden" value="@Model.State.SortModel?.SortKey" />
+                    <input name="ascending" type="hidden" value="@Model.State.SortModel?.Ascending" />
+                    <input name="model" type="hidden" value="@Model.State.FilterModel.Model" />
+                    <input name="year" type="hidden" value="@Model.State.FilterModel.Year" />
+                    <input name="displacement" type="hidden" value="@Model.State.FilterModel.Displacement" />
+
+                    <select name="company" asp-items="@Model.State.FilterModel.Company"
                             onchange="this.form.submit()"></select>
                 </form>
             </th>
             <th>
                 <form method="get">
-                    <input name="model" asp-for="@Model.FilterModel.Model" value="@Model.FilterModel.Model" />
+                    <input name="sortKey" type="hidden" value="@Model.State.SortModel?.SortKey" />
+                    <input name="ascending" type="hidden" value="@Model.State.SortModel?.Ascending" />
+                    <input name="company" type="hidden" value="@Model.State.FilterModel.Company.SelectedValue" />
+                    <input name="year" type="hidden" value="@Model.State.FilterModel.Year" />
+                    <input name="displacement" type="hidden" value="@Model.State.FilterModel.Displacement" />
+
+                    <input name="model" asp-for="@Model.State.FilterModel.Model" value="@Model.State.FilterModel.Model" />
                     <input type="submit" value="Filter" />
                 </form>
             </th>
             <th>
                 <form method="get">
-                    <input name="year" asp-for="@Model.FilterModel.Year" value="@Model.FilterModel.Year" />
+                    <input name="sortKey" type="hidden" value="@Model.State.SortModel?.SortKey" />
+                    <input name="ascending" type="hidden" value="@Model.State.SortModel?.Ascending" />
+                    <input name="company" type="hidden" value="@Model.State.FilterModel.Company.SelectedValue" />
+                    <input name="model" type="hidden" value="@Model.State.FilterModel.Model" />
+                    <input name="displacement" type="hidden" value="@Model.State.FilterModel.Displacement" />
+
+                    <input name="year" asp-for="@Model.State.FilterModel.Year" value="@Model.State.FilterModel.Year" />
                     <input type="submit" value="Filter" />
                 </form>
             </th>
             <th>
                 <form method="get">
-                    <input name="displacement" asp-for="@Model.FilterModel.Displacement" value="@Model.FilterModel.Displacement" />
+                    <input name="sortKey" type="hidden" value="@Model.State.SortModel?.SortKey" />
+                    <input name="ascending" type="hidden" value="@Model.State.SortModel?.Ascending" />
+                    <input name="company" type="hidden" value="@Model.State.FilterModel.Company.SelectedValue" />
+                    <input name="model" type="hidden" value="@Model.State.FilterModel.Model" />
+                    <input name="year" type="hidden" value="@Model.State.FilterModel.Year" />
+
+                    <input name="displacement" asp-for="@Model.State.FilterModel.Displacement" value="@Model.State.FilterModel.Displacement" />
                     <input type="submit" value="Filter" />
                 </form>
             </th>
             <th>
                 <form method="get">
+                    <input name="sortKey" type="hidden" value="@Model.State.SortModel?.SortKey" />
+                    <input name="ascending" type="hidden" value="@Model.State.SortModel?.Ascending" />
                     <input type="submit" value="Reset" />
                 </form>
             </th>
+        </tr>
+        <tr>
+            <th>Picture</th>
+            <th>
+                <sort-header key="@CarSortKey.Company" state="@Model.State">Company</sort-header>
+            </th>
+            <th>
+                <sort-header key="@CarSortKey.Model" state="@Model.State">Model</sort-header>
+            </th>
+            <th>
+                <sort-header key="@CarSortKey.Year" state="@Model.State">Year Manufactured</sort-header>
+            </th>
+            <th>
+                <sort-header key="@CarSortKey.Displacement" state="@Model.State">Displacement</sort-header>
+            </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
