--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                         </li>
                     </ul>
                 </div>
+                <partial name="_AuthPartial" />
             </div>
         </nav>
     </header>
