Add login page.

--- a/Web/Views/Shared/_AuthPartial.cshtml
+++ b/Web/Views/Shared/_AuthPartial.cshtml
@@ -1,1 +1,2 @@
-﻿<a asp-controller="Auth" asp-action="Register">Register</a>
+﻿<a asp-controller="Auth" asp-action="Register" class="nav-link">Register</a>
+<a asp-controller="Auth" asp-action="Login" class="nav-link">Log in</a>
