Some pending changes idk.

--- a/Web/Views/Car/Delete.cshtml
+++ b/Web/Views/Car/Delete.cshtml
@@ -8,31 +8,39 @@
 <h3>Are you sure you want to delete this car?</h3>
 <hr />
 
-<div>
+<div class="delete-container">
     <div>
         <img src="@Url.Action("Picture", new { Model.Id })" class="img-small" />
     </div>
     <div>
         <label asp-for="@Model.Company"></label>
-        <label>: @Model.Company</label>
+    </div>
+    <div>
+        <label>@Model.Company</label>
     </div>
     <div>
         <label asp-for="@Model.Model"></label>
-        <label>: @Model.Model</label>
+    </div>
+    <div>
+        <label>@Model.Model</label>
     </div>
     <div>
         <label asp-for="@Model.Year"></label>
-        <label>: @Model.Year</label>
+    </div>
+    <div>
+        <label>@Model.Year</label>
     </div>
     <div>
         <label asp-for="@Model.Displacement"></label>
-        <label>: @Model.Displacement</label>
+    </div>
+    <div>
+        <label>@Model.Displacement</label>
     </div>
 
     <div>
         <form method="post">
             <input asp-for="@Model.Id" type="hidden" />
-            <input type="submit" value="Delete" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
         </form>
     </div>
 </div>
