--- a/Web/wwwroot/css/site.css
+++ b/Web/wwwroot/css/site.css
@@ -25,3 +25,30 @@ body {
     max-width: 7rem;
     max-height: 7rem;
 }
+
+.delete-container {
+    display: grid;
+    grid: repeat(5, 1fr) / 3fr 2fr 2fr;
+}
+
+.delete-container div {
+    padding: 0.5rem;
+}
+
+.delete-container .img-small {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.delete-container div:first-child {
+    grid-row: 1 / 5;
+}
+
+.delete-container div:nth-child(2n+2) {
+    font-weight: 700;
+}
+
+.delete-container div:last-child {
+    font-weight: normal;
+    grid-column: 1 / 4;
+}
